[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/kenney_interface_sounds/error_003.wav" type="AudioStream" id=1]
[ext_resource path="res://src/scenes/KillBullet/KillBullet.gd" type="Script" id=2]
[ext_resource path="res://addons/kenney_interface_sounds/maximize_008.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/sprites720p.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5422, 15.3026 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 224, 1088, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 608, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1312, 608, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 1344, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1408, 1344, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 544, 1120, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 288, 1344, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "kill",
"speed": 5.0
}, {
"frames": [ null, null, null, null ],
"loop": true,
"name": "some",
"speed": 2.0
} ]

[node name="KillBullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Bullet" type="AnimatedSprite" parent="."]
modulate = Color( 1.09804, 0.968627, 2.00392, 1 )
frames = SubResource( 9 )
animation = "kill"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -20.222
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -13.315

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Bullet" to="." method="_on_bullet_animation_finished"]
